--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -170,6 +170,7 @@ nav {
     /* background: url('../imgMedia/face.png'); */
     /* filtered */
     background: url('../imgMedia/filtered.png');
+    /* background: url('../imgMedia/filtered.jp2'); */
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
